헤더 전체수정 오류있음
오류있지만 일단 편집 일부 완

--- a/css/header.css
+++ b/css/header.css
@@ -1,6 +1,6 @@
 header{
     margin-top: 10px;
-    border-bottom: 1px solid #ededef;
+    border-bottom: 2px solid #ededef;
     padding-bottom: 10px;
 }
 body{
@@ -14,22 +14,16 @@ body{
     padding: 8px 12px;
 }
 .bar_logo{
-    font-size: 24px;
-    color: gray;
-}
-
-.bar_menu{
     display: flex;
-    list-style: none;
+    justify-content: space-around;
+    padding: 0 15px 0 15px;
 }
 
-.bar_menu {
-    padding: 8px 12px;
+.bar_logo img{
+    margin-right: 20px;
 }
-
-a{
+.bar_logo a{
     text-decoration: none;
-    color: black;
-    padding-left: 0;
+    color: gray;
 }
 
