--- a/css/header.css
+++ b/css/header.css
@@ -27,3 +27,10 @@ body{
     color: gray;
 }
 
+.bar_menu{
+    display: flex;
+    justify-content: space-around;
+    text-decoration: none;
+    color: gray;
+}
+
